@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
     implementation 'org.mongodb:mongo-java-driver:3.6+'
+    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
 
 
     // https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver
@@ -67,6 +68,9 @@ repositories {
     mavenCentral()
 }
 
+test {
+    useJUnitPlatform()
+}
 
 jlink {
     addExtraDependencies("javafx")
@@ -106,27 +110,6 @@ run {
         classpath = files()
     }
 }
-
-jlink {
-    addExtraDependencies("javafx")
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher {
-        name = 'whatwebfx'
-
-        jvmArgs = [
-                "--add-opens", "javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons"
-        ]
-    }
-
-    jpackage {
-        installerType = "deb"
-        jpackageHome = "/home/duxon/.sdkman/candidates/java/14.0.2.fx-zulu"
-        if (org.gradle.internal.os.OperatingSystem.current().windows) {
-            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
-        }
-    }
-}
-
 
 
 
